--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
 
 
       <!--=============== SCROLLREVEAL ===============-->
-      <script src="/assets/js/scrollreveal.min.js"></script>
+      <script src="./assets/js/scrollreveal.min.js"></script>
       
       <!--=============== SWIPER ===============-->
       <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -768,6 +768,6 @@
       </script>
 
       <!--=============== MAIN JS ===============-->
-      <script src="assets/js/main.js"></script>
+      <script src="./assets/js/main.js"></script>
    </body>
 </html>
