--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
       <title>Brainsstrom | School of Design</title>
    </head>
    <body>
+      <!--==================== LOADING SCREEN ====================-->
+
+      <div id="loading-screen">
+         <div id="lottie-container"></div>
+      </div>
+
       <!--==================== HEADER ====================-->
       <header class="header" id="header">
          <nav class="nav container">
@@ -766,6 +772,10 @@
         document.querySelector('.swiper-button-prev-unique').style.display = 'none';
 
       </script>
+
+      <!--=============== LOTTIE ANIMATION ===============-->
+
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.6/lottie.min.js"></script>
 
       <!--=============== MAIN JS ===============-->
       <script src="./assets/js/main.js"></script>
