--- a/index.html
+++ b/index.html
@@ -92,17 +92,17 @@
                         </a>
                      </li>
                      <li>
-                        <a href="#">
+                        <a href="https://www.facebook.com/profile.php?id=61557841482308&mibextid=ZbWKwL">
                            <img src="./assets/icons/facebook.svg" alt="">
                         </a>
                      </li>
                      <li>
-                        <a href="#">
+                        <a href="https://www.instagram.com/brainstromschoolofdesign?igsh=ZmlzYjl5djhvYW55">
                            <img src="./assets/icons/instagram.svg" alt="">
                         </a>
                      </li>
                      <li>
-                        <a href="#">
+                        <a href="https://www.youtube.com/@brainsstrom?sub_confirmation=1">
                            <img src="./assets/icons/youtube.svg" alt="">
                         </a>
                      </li>
@@ -160,17 +160,17 @@
                         </a>
                      </li>
                      <li>
-                        <a href="#">
+                        <a href="https://www.facebook.com/profile.php?id=61557841482308&mibextid=ZbWKwL">
                            <img src="./assets/icons/facebook.svg" alt="">
                         </a>
                      </li>
                      <li>
-                        <a href="#">
+                        <a href="https://www.instagram.com/brainstromschoolofdesign?igsh=ZmlzYjl5djhvYW55">
                            <img src="./assets/icons/instagram.svg" alt="">
                         </a>
                      </li>
                      <li>
-                        <a href="#">
+                        <a href="https://www.youtube.com/@brainsstrom?sub_confirmation=1">
                            <img src="./assets/icons/youtube.svg" alt="">
                         </a>
                      </li>
