--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                   <div> 
                      <ul>
                         <li>
-                           <a href="#" class="menu__link">
+                           <a href="https://wa.me/+917200444338" class="menu__link">
                               <img src="./assets/icons/phone.svg" alt="">
                               +91 7200444338
                            </a>
