--- a/index.html
+++ b/index.html
@@ -475,9 +475,9 @@
                         </div>
                         <div class="swiper-slide testimonials-item">
                            <div class="info">
-                              <img src="./assets/img/test/2.png" alt="img">
+                              <img src="./assets/img/test/2.jpeg" alt="img">
                               <div class="text-box">
-                                 <h3 class="name">Bavani</h3>
+                                 <h3 class="name">Sadiq Khan</h3>
                                  <div class="rating">
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
@@ -488,16 +488,16 @@
                               </div>
                            </div>
                            <p>
-                              Tutor is well experienced and thus very good at the technique. He changes his teaching style
-                              based on our needs and our level of understanding. Doesn't hesitate to repeat the concepts if
-                              we do not understand. Very comfortable to learn from him.
+                              I had the pleasure of working with Tanzeem a few years ago, and I've been impressed by his
+                              growth. From being a designer to a UX design manager, Tanzeem has shown dedication, creativity,
+                              and a drive for excellence. Keep up the fantastic work 👏
                            </p>
                         </div>
                         <div class="swiper-slide testimonials-item">
                            <div class="info">
-                              <img src="./assets/img/test/3.png" alt="img">
+                              <img src="./assets/img/test/3.jpeg" alt="img">
                               <div class="text-box">
-                                 <h3 class="name">Bavani</h3>
+                                 <h3 class="name">Jack Chan</h3>
                                  <div class="rating">
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
@@ -508,9 +508,8 @@
                               </div>
                            </div>
                            <p>
-                              Tutor is well experienced and thus very good at the technique. He changes his teaching style
-                              based on our needs and our level of understanding. Doesn't hesitate to repeat the concepts if
-                              we do not understand. Very comfortable to learn from him.
+                              Tanzeem was very attentive and his care for the finer details was amazing. I truly enjoyed
+                              working with him on my projects. Keep it up!
                            </p>
                         </div>
                      </div>
