--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                            <div class="info">
                               <img src="./assets/img/test/2.jpeg" alt="img">
                               <div class="text-box">
-                                 <h3 class="name">Sadiq Khan</h3>
+                                 <h3 class="name">Sadiq</h3>
                                  <div class="rating">
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
@@ -497,7 +497,7 @@
                            <div class="info">
                               <img src="./assets/img/test/3.jpeg" alt="img">
                               <div class="text-box">
-                                 <h3 class="name">Jack Chan</h3>
+                                 <h3 class="name">Jack</h3>
                                  <div class="rating">
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
