--- a/index.html
+++ b/index.html
@@ -455,9 +455,9 @@
                      <div class="swiper-wrapper">
                         <div class="swiper-slide testimonials-item">
                            <div class="info">
-                              <img src="./assets/img/test/1.png" alt="img">
+                              <img src="./assets/img/test/1.jpeg" alt="img">
                               <div class="text-box">
-                                 <h3 class="name">Bavani</h3>
+                                 <h3 class="name">Shalini</h3>
                                  <div class="rating">
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
