--- a/index.html
+++ b/index.html
@@ -111,6 +111,11 @@
                            <img src="./assets/icons/twitter.svg" alt="">
                         </a>
                      </li>
+                     <li>
+                        <a href="https://brainsstromschoolofdesign.blogspot.com/?view=magazine">
+                           <i class="ri-blogger-fill"></i>
+                        </a>
+                     </li>
                   </ul>
                </div>
                
@@ -158,6 +163,11 @@
                      <li>
                         <a href="#">
                            <img src="./assets/icons/twitter.svg" alt="">
+                        </a>
+                     </li>
+                     <li>
+                        <a href="https://brainsstromschoolofdesign.blogspot.com/?view=magazine">
+                           <i class="ri-blogger-fill"></i>
                         </a>
                      </li>
                   </ul>
