--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         </a>
                      </li>
                      <li>
-                        <a href="https://brainsstromschoolofdesign.blogspot.com/?view=magazine">
+                        <a href="https://brainsstromschoolofdesign.blogspot.com/?view=classic">
                            <i class="ri-blogger-fill"></i>
                         </a>
                      </li>
@@ -166,7 +166,7 @@
                         </a>
                      </li>
                      <li>
-                        <a href="https://brainsstromschoolofdesign.blogspot.com/?view=magazine">
+                        <a href="https://brainsstromschoolofdesign.blogspot.com/?view=classic">
                            <i class="ri-blogger-fill"></i>
                         </a>
                      </li>
