--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                      </li>
                      <li>
                         <a href="https://brainsstromschoolofdesign.blogspot.com/?view=classic">
-                           <i class="ri-blogger-fill"></i>
+                           <img src="./assets/icons/blogger.svg" alt="">
                         </a>
                      </li>
                   </ul>
@@ -167,7 +167,7 @@
                      </li>
                      <li>
                         <a href="https://brainsstromschoolofdesign.blogspot.com/?view=classic">
-                           <i class="ri-blogger-fill"></i>
+                           <img src="./assets/icons/blogger.svg" alt="">
                         </a>
                      </li>
                   </ul>
