--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         </a>
                      </li>
                      <li>
-                        <a href="#">
+                        <a href="https://x.com/brainsstrom">
                            <img src="./assets/icons/twitter.svg" alt="">
                         </a>
                      </li>
@@ -161,7 +161,7 @@
                         </a>
                      </li>
                      <li>
-                        <a href="#">
+                        <a href="https://x.com/brainsstrom">
                            <img src="./assets/icons/twitter.svg" alt="">
                         </a>
                      </li>
