--- a/index.html
+++ b/index.html
@@ -177,22 +177,35 @@
                <div class="home__data">
                   <img class="home__title1" src="./assets/img/svg/title1.svg" alt="">
                   <div class="home__buttons">
-                     <img class="home__title2" src="./assets/img/svg/title2.svg" alt="">
+                     <img class="home__title2_desktop" src="./assets/img/svg/title2.svg" alt="">
+                     <img class="home__title2_ph" src="./assets/img/svg/title2-ph.svg" alt="">
                      <div>
                         <div id="registerButton" class="home__buttons_2">
                            <a href="#" class="button"></a>
-                           <span class="price1">at Rs 349/-</span>
                         </div>
                         <div id="languageButtons" class="hidden_1">
                            <a href="https://forms.zohopublic.in/brainsstromschoolofdesign/form/DonationForm/formperma/AA6teOuXxCXnYgFfYNe6NH-ICSHUIsZauMKRt_mBT_s" id="tamilButton"></a>
                            <span id="orText_1">or</span>
                            <a href="https://forms.zohopublic.in/brainsstromschoolofdesign/form/HowtobecomeaUIUXDesignerWebinarRegistrationEnglish/formperma/iWqGycdZP37ceoiJL7RL2ps1q6eJp7rgUs-dEOCn4FI" id="englishButton"></a>
-                           <span class="price1">at Rs 349/-</span>
-                        </div>
+                           </div>
+                        <span class="price1">Book now at ₹ 349/- <s>₹999</s></span>
                      </div>
                   </div>
+                  <div class="animation-text-container">
+                     <div id="lottie"></div>
+                     <div class="text-content">
+                         <p>You will receive a free Digital UI/UX <br> Kit valued ₹1999 after the workshop <br> <span class="viewkit">View Kit<img src="./assets/icons/eye.svg" alt=""></span></p>
+                     </div>
+                 </div>
                </div>
             </div>
+            <div id="slidingImageContainer" class="sliding-image-container">
+               <img src="./assets/img/svg/view-kit.svg" alt="Kit Image" class="sliding-image-desktop">
+               <img src="./assets/img/svg/view-kit-ph.svg" alt="Kit Image" class="sliding-image-ph">
+               <div id="closeButton" class="close-button">
+                  <i class="ri-close-line"></i>
+               </div>
+           </div>
             
          </section>
          <div>
